--- a/Day1_20230707/Homework_1.ipynb
+++ b/Day1_20230707/Homework_1.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -35,7 +35,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -47,16 +47,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "5"
+       "3"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -75,7 +75,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -119,7 +119,7 @@
        " (6, 6)]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -138,7 +138,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -161,7 +161,7 @@
        " (6, 5)}"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -180,7 +180,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -189,7 +189,7 @@
        "{(6, 1), (6, 2), (6, 3), (6, 4), (6, 5), (6, 6)}"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -208,7 +208,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -217,7 +217,7 @@
        "{(1, 3), (2, 4), (3, 1), (3, 5), (4, 2), (4, 6), (5, 3), (6, 4)}"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -229,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -238,7 +238,7 @@
        "{(3, 1), (4, 2), (5, 3), (6, 4)}"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -263,7 +263,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -271,9 +271,12 @@
      "output_type": "stream",
      "text": [
       "prob_a_and_b: 0.22 \n",
-      "prob_red_ball: 0.5 \n",
-      "prob_white_ball: 0.5 \n",
-      "are_a_and_b_independent False\n"
+      "prob_ball1_is_red: 0.5 \n",
+      "prob_ball2_is_white: 0.5 \n",
+      "prob_ball2_is_white_wo_rep: 0.5 \n",
+      "are_a_and_b_independent with replacement: False \n",
+      "prob_a_and_b_wo_rep: 0.24 \n",
+      "are_a_and_b_independent without replacement: False\n"
      ]
     }
    ],
@@ -299,6 +302,8 @@
     "favorable_outcomes = 0\n",
     "red_balls = 0\n",
     "white_balls = 0\n",
+    "favorable_outcomes_wo_rep = 0\n",
+    "white_balls_wo_rep = 0\n",
     "\n",
     "# run experiment to choose 2 balls 10000 times\n",
     "for i in range(num_iterations):\n",
@@ -306,6 +311,8 @@
     "    # randomly choosing an urn\n",
     "    urn_chosen = np.random.choice([1,2])\n",
     "\n",
+    "    ##########################################################################################\n",
+    "    \n",
     "    # choosing with replacement\n",
     "    ball1 = experiment_output(urn1_sample_space if urn_chosen == 1 else urn2_sample_space)\n",
     "    ball2 = experiment_output(urn1_sample_space if urn_chosen == 1 else urn2_sample_space)\n",
@@ -322,33 +329,67 @@
     "    if ball2 == 'white':\n",
     "        white_balls += 1\n",
     "\n",
+    "    ##########################################################################################\n",
+    "    \n",
+    "    # choosing without replacement\n",
+    "    new_urn_sample_space = list(urn1_sample_space if (urn_chosen == 1) else urn2_sample_space)\n",
+    "    new_urn_sample_space.remove(ball1)\n",
+    "\n",
+    "    ball2_wo_rep = experiment_output(new_urn_sample_space)\n",
+    "\n",
+    "    # event ball2_wo_rep is white (without replacement case)\n",
+    "    if ball2_wo_rep == 'white':\n",
+    "        white_balls_wo_rep += 1\n",
+    "        \n",
+    "    # favorable outcomes of 1st ball is red and 2nd ball is white without replacement\n",
+    "    if ball1 == 'red' and ball2_wo_rep == 'white':\n",
+    "        favorable_outcomes_wo_rep += 1\n",
+    "\n",
+    "    ##########################################################################################\n",
     "    \n",
     "\n",
     "prob_a_and_b = round(favorable_outcomes/num_iterations, 2)\n",
-    "prob_red_ball = round(red_balls/num_iterations, 2)\n",
-    "prob_white_ball = round(white_balls/num_iterations, 2)\n",
+    "prob_ball1_is_red = round(red_balls/num_iterations, 2)\n",
+    "prob_ball2_is_white = round(white_balls/num_iterations, 2)\n",
     "\n",
-    "are_a_and_b_independent = (prob_a_and_b == round(prob_red_ball*prob_white_ball, 2))\n",
+    "prob_a_and_b_wo_rep = round(favorable_outcomes_wo_rep/num_iterations, 2)\n",
+    "prob_ball2_is_white_wo_rep = round(white_balls_wo_rep/num_iterations, 2)\n",
     "\n",
-    "print('prob_a_and_b:', prob_a_and_b, '\\nprob_red_ball:', prob_red_ball, '\\nprob_white_ball:', prob_white_ball, '\\nare_a_and_b_independent', are_a_and_b_independent)"
+    "are_a_and_b_independent = (prob_a_and_b == round(prob_ball1_is_red*prob_ball2_is_white, 2))\n",
+    "are_a_and_b_independent_wo_rep = (prob_a_and_b_wo_rep == round(prob_ball1_is_red*prob_ball2_is_white_wo_rep, 2))\n",
+    "\n",
+    "print('prob_a_and_b:', prob_a_and_b, '\\nprob_ball1_is_red:', prob_ball1_is_red, '\\nprob_ball2_is_white:',prob_ball2_is_white, \\\n",
+    "      '\\nprob_ball2_is_white_wo_rep:', prob_ball2_is_white_wo_rep, '\\nare_a_and_b_independent with replacement:', are_a_and_b_independent, \\\n",
+    "        '\\nprob_a_and_b_wo_rep:', prob_a_and_b_wo_rep, '\\nare_a_and_b_independent without replacement:', are_a_and_b_independent_wo_rep)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
-     "data": {
-      "text/plain": [
-       "0.5"
-      ]
-     },
-     "execution_count": 98,
-     "metadata": {},
-     "output_type": "execute_result"
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['red', 'red', 'white', 'red', 'white']\n"
+     ]
     }
    ],
+   "source": [
+    "a = ['red', 'white', 'red', 'white','red', 'white']\n",
+    "b = ['red', 'white', 'white', 'white','red', 'white']\n",
+    "n = 1\n",
+    "c = (a if (n == 1) else b)\n",
+    "c.remove('white')\n",
+    "print(c)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
    "source": [
     "p_red = (1/2)*(5/15 + 10/15)\n",
     "p_white = (1/2)*(10/15 + 5/15)\n",
@@ -397,6 +438,152 @@
    "outputs": [],
    "source": [
     "\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "5."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.1333546497\n"
+     ]
+    }
+   ],
+   "source": [
+    "import numpy as np\n",
+    "\n",
+    "# Define transition matrix\n",
+    "P = np.array([[0.5, 0.4, 0.1],\n",
+    "              [0.2, 0.5, 0.3],\n",
+    "              [0.0, 0.2, 0.8]])\n",
+    "\n",
+    "# Define initial vector\n",
+    "v = np.array([1.0, 0.0, 0.0])\n",
+    "\n",
+    "# Calculate final vector after 10 stops\n",
+    "for i in range(10):\n",
+    "    v = v.dot(P)\n",
+    "\n",
+    "# Print probability of being in state 0 (empty bus)\n",
+    "print(v[0])\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import numpy as np"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Ans. 5"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 46,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def exp_result(sample_space, prob):\n",
+    "    return np.random.choice(sample_space, p = prob)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 47,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def passengers_in_bus_at_ith_stop(board_samp_space, board_prob, psgr_leaving_prob, i):\n",
+    "    psgrs_in_bus = 0 # number of passengers in the bus as it leaves ith stop, initially 0\n",
+    "    \n",
+    "    for n in range(i):\n",
+    "        \n",
+    "        num_psgr_can_leave = np.random.randint(0, psgrs_in_bus+1) # randomly choosing how many passengers leaves the bus at ith stop\n",
+    "        num_psgr_leaving_at_ith_stop = exp_result([num_psgr_can_leave, 0], [psgr_leaving_prob, 1-psgr_leaving_prob]) # choosing the passengers leaving with probability of 0.2\n",
+    "        \n",
+    "        psgrs_in_bus -= num_psgr_leaving_at_ith_stop\n",
+    "        \n",
+    "        num_psgr_boarding = exp_result(board_samp_space, board_prob) # number of passengers who boarded the bus at stop i\n",
+    "        psgrs_in_bus += num_psgr_boarding\n",
+    "\n",
+    "    return psgrs_in_bus"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0.058\n"
+     ]
+    }
+   ],
+   "source": [
+    "# define variables\n",
+    "board_samp_space = [0, 1, 2]\n",
+    "board_prob = [0.5, 0.4, 0.1]\n",
+    "psgr_leaving_prob = 0.2\n",
+    "Li = 0 # number of passengers in the bus as it leaves ith stop\n",
+    "num_iterations = 1000\n",
+    "counter = 0\n",
+    "\n",
+    "# finding favourable outcomes in running num_iterations time\n",
+    "for _ in range(num_iterations):\n",
+    "    if passengers_in_bus_at_ith_stop(board_samp_space, board_prob, psgr_leaving_prob, i=10) == 0:\n",
+    "        counter += 1\n",
+    "\n",
+    "prob_0_psgr_at_ith_stop = counter/num_iterations\n",
+    "\n",
+    "print(prob_0_psgr_at_ith_stop)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 45,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0"
+      ]
+     },
+     "execution_count": 45,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "np.random.randint(0, 1)"
    ]
   }
  ],
